--- a/index.html
+++ b/index.html
@@ -293,6 +293,15 @@
         <li>No advertising SDKs, tracking pixels, or social plugins are bundled with the app.</li>
     </ul>
 
+    <h3>Security practices</h3>
+    <ul>
+        <li>All communication between the app and our servers is performed over HTTPS with TLS 1.2+; plaintext transport is never allowed.</li>
+        <li>API credentials and database access are restricted to the service itself—no shared credentials or third-party operators.</li>
+        <li>Data stored on the server resides on encrypted volumes in a hardened infrastructure environment with regular security updates.</li>
+        <li>Operational staff access is logged and limited to the minimum required to provide support or maintain uptime.</li>
+        <li>Backups are encrypted, stored separately, and rotated on a fixed schedule to minimize retention while still supporting disaster recovery.</li>
+    </ul>
+
     <h3>Retention & deletion</h3>
     <ul>
         <li>We retain leaderboard and league data while your account remains active. Requesting account deletion wipes it permanently.</li>
